wip : Refactor code to fit the new API
skip-ci